# ai-trading-bot

./: .gitignore  README.md  WARP.md  dependencies  pyproject.toml
src/chatbot/: cli.py
