[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-bot"
version = "0.1.0"
description = "A minimal Python chat bot CLI starter."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Felicity" }]
keywords = ["chatbot", "cli"]

[project.scripts]
chat-bot = "chatbot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
